zero-schema-derive/tests/ui/fail/12_self_recursion.rs
use zero_schema_derive::ZeroSchema; #[derive(ZeroSchema)] struct Node { next: Node } fn main() {}
