zero-schema-derive/tests/ui/fail/12_self_recursion.stderr
error[E0072]: recursive type `Node` has infinite size
 --> tests/ui/fail/12_self_recursion.rs:1:59
  |
1 | use zero_schema_derive::ZeroSchema; #[derive(ZeroSchema)] struct Node { next: Node } fn main() {}
  |                                                           ^^^^^^^^^^^         ---- recursive without indirection
  |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
  |
1 | use zero_schema_derive::ZeroSchema; #[derive(ZeroSchema)] struct Node { next: Box<Node> } fn main() {}
  |                                                                               ++++    +
